[package]
name = "endfind"
description = "A simple application to find the end portal in Minecraft"
version = "0.1.0"
edition = "2024"
readme = "README.md"
license = "GPL-3.0-only"

[dependencies]
egui = "0.33"
eframe = "0.33"
arboard = { version = "3.6", features = ["wayland-data-control"] }
libm = "0.2"
rand = "0.9"